--- a/src/IBuilder/IBuilder.csproj
+++ b/src/IBuilder/IBuilder.csproj
@@ -2,21 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <PackageId>IBuilder</PackageId>
     <Title>IBuilder</Title>
     <Authors>Dearain</Authors>
     <Description>Add IBuilder interface.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageId>IBuilder</PackageId>
-    <RepositoryUrl>https://github.com/d3ar1n/IBuilder</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/d3ar1n/IBuilder</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/d3ara1n/IBuilder</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/d3ara1n/IBuilder</PackageProjectUrl>
     <PackageTags>builder pattern</PackageTags>
     <LangVersion>default</LangVersion>
-    <Version>1.1.0</Version>
-    <Company />
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GitVersion.MSBuild" Version="5.6.11">
+    <PackageReference Include="GitVersion.MSBuild" Version="5.12.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
